--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -385,16 +385,14 @@ main {
     display: flex;
     &__container {
       height: max-content;
-      padding-right: 15px;
+      margin-right: 15px;
       a {
         img:hover {
           opacity: .5;
           transition: all 400ms ease;
         }
       }
-      &:last-child {
-        padding: 0;
-      }
+
     }
 
   }
@@ -613,6 +611,9 @@ main {
         }
       }
     }
+    .contact {
+      padding: 125px 70px;
+    }
   }
   footer {
     display: flex;
@@ -687,7 +688,9 @@ main {
     }
     .contact-with-us {
       padding: 60px;
-
+    }
+    .contact {
+      padding: 125px 40px;
     }
   }
   .footer {
@@ -717,8 +720,9 @@ main {
       }
     }
     .contact {
+      padding: 10px 10px;
       .info {
-        padding: 127px 70px;
+        padding: 127px 10px;
       }
     }
     .contact-with-us {
@@ -792,6 +796,9 @@ main {
       &__button {
         padding: 16px 30px;
       }
+    }
+    .contact {
+      padding: 10px 10px;
     }
   }
 }
