--- a/app/style/style.css
+++ b/app/style/style.css
@@ -20,10 +20,10 @@ html, body {
 .main-screen {
   background: url("../images/bg.png") no-repeat center;
   background-size: cover;
-  min-height: 800px;
   height: 100vh; }
   .main-screen .menu {
-    padding-top: 35px; }
+    padding-top: 35px;
+    transition: all .4s ease; }
     .main-screen .menu .menu__mobile {
       width: 100%;
       padding: 0;
@@ -51,8 +51,7 @@ html, body {
     top: 0;
     width: 100%;
     background-color: white;
-    z-index: 999;
-    padding-bottom: 25px; }
+    z-index: 2; }
 
 main {
   font-family: "Lato", sans-serif; }
@@ -71,20 +70,22 @@ main {
       margin: 0; }
   main .new-generation {
     padding: 132px 230px; }
-    main .new-generation .info h3 {
-      font-size: 18px;
-      color: #353738;
-      font-family: "Lato", sans-serif;
-      font-weight: bold;
-      text-align: center;
-      letter-spacing: 3.7px;
-      margin: 23px; }
-    main .new-generation .info p {
-      font-size: 16px;
-      line-height: 30px;
-      color: #848789;
-      font-family: "Lato", sans-serif;
-      text-align: center; }
+    main .new-generation .info {
+      max-width: 1080px; }
+      main .new-generation .info h3 {
+        font-size: 18px;
+        color: #353738;
+        font-family: "Lato", sans-serif;
+        font-weight: bold;
+        text-align: center;
+        letter-spacing: 3.7px;
+        margin: 23px 0; }
+      main .new-generation .info p {
+        font-size: 16px;
+        line-height: 30px;
+        color: #848789;
+        font-family: "Lato", sans-serif;
+        text-align: center; }
   main .generation-info__items {
     display: flex; }
     main .generation-info__items .image-container {
@@ -99,10 +100,8 @@ main {
       flex-direction: column;
       width: 33.1%; }
       main .generation-info__items .item-content .info {
-        padding-top: 100px;
-        padding-left: 70px;
-        padding-right: 59px;
-        padding-bottom: 54px;
+        max-width: 400px;
+        padding: 100px 59px 54px 70px;
         position: relative; }
         main .generation-info__items .item-content .info .info__title {
           margin-top: 23px;
@@ -117,13 +116,12 @@ main {
           padding-bottom: 33px; }
           main .generation-info__items .item-content .info p:after {
             content: '';
-            position: absolute;
-            left: 45%;
-            bottom: 0px;
             width: 50px;
             height: 3px;
             background: #d7d7d7;
-            border-width: 0 10px; }
+            border-width: 0 10px;
+            display: block;
+            margin: 40px auto 0; }
         main .generation-info__items .item-content .info:after {
           content: '';
           position: absolute;
@@ -157,18 +155,20 @@ main {
       align-items: center;
       font-family: "Lato", sans-serif; }
       main .contact .info__title {
+        max-width: 1040px;
         margin-top: 27px;
         margin-bottom: 11px;
         text-transform: none; }
-        main .contact .info__title p {
+        main .contact .info__title__time {
           display: inline;
           color: #848789; }
       main .contact .info__text {
+        max-width: 1040px;
         font-size: 24px;
         line-height: 34px;
         font-style: italic; }
     main .contact .slick-dots {
-      margin-bottom: 65px;
+      bottom: 65px;
       left: 0; }
       main .contact .slick-dots li {
         color: #a9afb3;
@@ -292,14 +292,16 @@ main {
   .footer .address .city a {
     text-decoration: none;
     color: #848789; }
-  .footer .social-icon {
+  .footer .social-icons {
     display: flex; }
-    .footer .social-icon__container {
+    .footer .social-icons__container {
       height: max-content;
       margin-right: 15px; }
-      .footer .social-icon__container a img:hover {
+      .footer .social-icons__container a img:hover {
         opacity: .5;
         transition: all 400ms ease; }
+      .footer .social-icons__container:last-child {
+        margin: 0; }
   .footer .author {
     display: flex;
     align-items: center; }
@@ -307,9 +309,11 @@ main {
       color: #848789;
       margin-right: 10px;
       min-width: 110px; }
-    .footer .author img {
-      width: 100%;
-      height: max-content; }
+    .footer .author a {
+      text-decoration: none; }
+      .footer .author a img {
+        width: 100%;
+        height: max-content; }
 
 @media screen and (max-width: 1440px) {
   .container {
@@ -455,7 +459,7 @@ main {
         margin-bottom: 0;
         display: flex;
         justify-content: space-around; }
-    footer .social-icon {
+    footer .social-icons {
       display: flex;
       justify-content: space-around; } }
 
