--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -27,12 +27,11 @@ html, body {
 .main-screen {
   background: url("../images/bg.png") no-repeat center;
   background-size: cover;
-  min-height: 800px;
   height: 100vh;
 
   .menu {
     padding-top: 35px;
-
+    transition: all .4s ease;
     .menu__mobile {
       width: 100%;
       padding: 0;
@@ -66,8 +65,7 @@ html, body {
     top: 0;
     width: 100%;
     background-color: white;
-    z-index: 999;
-    padding-bottom: 25px;
+    z-index: 2;
   }
 }
 
@@ -92,6 +90,7 @@ main {
   .new-generation {
     padding: 132px 230px;
     .info {
+      max-width: 1080px;
       h3 {
         font-size: 18px;
         color: #353738;
@@ -99,7 +98,7 @@ main {
         font-weight: bold;
         text-align: center;
         letter-spacing: 3.7px;
-        margin: 23px;
+        margin: 23px 0;
       }
       p {
         font-size: 16px;
@@ -128,10 +127,8 @@ main {
         flex-direction: column;
         width: 33.1%;
         .info {
-          padding-top: 100px;
-          padding-left: 70px;
-          padding-right: 59px;
-          padding-bottom: 54px;
+          max-width: 400px;
+          padding: 100px 59px 54px 70px;
           position: relative;
           .info__title {
             margin-top: 23px;
@@ -147,13 +144,12 @@ main {
             padding-bottom: 33px;
             &:after {
               content: '';
-              position: absolute;
-              left: 45%;
-              bottom: 0px;
               width: 50px;
               height: 3px;
               background: #d7d7d7;
               border-width: 0 10px;
+              display: block;
+              margin: 40px auto 0;
             }
           }
           &:after {
@@ -202,15 +198,18 @@ main {
 
       font-family: $Lato;
       &__title {
+        max-width: 1040px;
         margin-top: 27px;
         margin-bottom: 11px;
         text-transform: none;
-        p {
+        &__time {
+
           display: inline;
           color: #848789;
         }
       }
       &__text {
+        max-width: 1040px;
         font-size: 24px;
         line-height: 34px;
         font-style: italic;
@@ -218,7 +217,8 @@ main {
       }
     }
     .slick-dots {
-      margin-bottom: 65px;
+
+      bottom: 65px;
       left: 0;
       li {
 
@@ -381,7 +381,7 @@ main {
       }
     }
   }
-  .social-icon {
+  .social-icons {
     display: flex;
     &__container {
       height: max-content;
@@ -392,7 +392,9 @@ main {
           transition: all 400ms ease;
         }
       }
-
+      &:last-child {
+        margin: 0;
+      }
     }
 
   }
@@ -404,10 +406,14 @@ main {
       margin-right: 10px;
       min-width: 110px;
     }
-    img {
-      width: 100%;
-      height: max-content;
+    a {
+      text-decoration: none;
+      img {
+        width: 100%;
+        height: max-content;
+      }
     }
+
   }
 }
 
@@ -626,7 +632,7 @@ main {
         justify-content: space-around;
       }
     }
-    .social-icon {
+    .social-icons {
       display: flex;
       justify-content: space-around;
     }
