--- a/app/style/style.css
+++ b/app/style/style.css
@@ -9,49 +9,45 @@ html, body {
 .slick-dotted.slick-slider {
   margin-bottom: 0; }
 
-.flex-column {
-  display: flex;
-  flex-direction: column; }
+.menu {
+  position: absolute;
+  width: 100%;
+  padding-top: 35px;
+  transition: all .4s ease; }
+  .menu .menu__container {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Lato", sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 13px; }
+    .menu .menu__container .menu__item {
+      margin: 0 40px; }
+      .menu .menu__container .menu__item a {
+        display: block;
+        color: #4d4959;
+        text-decoration: none;
+        letter-spacing: 3px; }
+        .menu .menu__container .menu__item a:hover {
+          color: #64c29e;
+          cursor: pointer;
+          transition: color 300ms ease-out; }
 
-.flex-row {
-  display: flex;
-  flex-direction: row; }
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 2; }
 
 .main-screen {
   background: url("../images/bg.png") no-repeat center;
   background-size: cover;
   height: 100vh; }
-  .main-screen .menu {
-    padding-top: 35px;
-    transition: all .4s ease; }
-    .main-screen .menu .menu__mobile {
-      width: 100%;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: "Lato", sans-serif;
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 13px; }
-      .main-screen .menu .menu__mobile .menu__item {
-        margin: 0 40px; }
-        .main-screen .menu .menu__mobile .menu__item a {
-          display: block;
-          color: #4d4959;
-          text-decoration: none;
-          letter-spacing: 3px; }
-          .main-screen .menu .menu__mobile .menu__item a:hover {
-            color: #64c29e;
-            cursor: pointer;
-            transition: color 300ms ease-out; }
-  .main-screen .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: white;
-    z-index: 2; }
 
 main {
   font-family: "Lato", sans-serif; }
@@ -346,26 +342,24 @@ main {
     height: auto; } }
 
 @media screen and (max-width: 768px) {
-  .main-screen .menu {
+  .menu {
     padding-top: 0; }
-  .main-screen .menu__mobile {
+  .menu__container {
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: #fff; }
-    .main-screen .menu__mobile .menu__item {
+    .menu__container .menu__item {
       padding: 34px; }
-    .main-screen .menu__mobile svg {
-      display: none; }
-  .main-screen .main-screen__hamg-menu {
-    position: absolute;
-    top: 5%;
-    right: -20px;
+  .hamburg-menu {
+    position: fixed;
+    top: 50px;
+    right: 0;
     transform: translate(-50%, -50%);
     width: 80px;
     height: 80px;
     cursor: pointer;
-    z-index: 2; }
+    z-index: 3; }
   .burger-nav {
     width: 50px;
     height: 6px;
@@ -375,7 +369,8 @@ main {
     transform: translate(-50%, -50%);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .5s;
-    background: #64c29e; }
+    background: #64c29e;
+    border: none; }
   .burger-nav:before, .burger-nav:after {
     content: '';
     width: 50px;
@@ -387,22 +382,23 @@ main {
   .burger-nav:before {
     top: -16px;
     background: #64c29e; }
-  .main-screen__hamg-menu.active .burger-nav {
+  .hamburg-menu.active .burger-nav {
     background: rgba(0, 0, 0, 0);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
     transition: all 1s ease; }
-  .main-screen__hamg-menu.active .burger-nav:before {
+  .hamburg-menu.active .burger-nav:before {
     top: 0;
     transform: rotate(45deg); }
-  .main-screen__hamg-menu.active .burger-nav:after {
+  .hamburg-menu.active .burger-nav:after {
     top: 0;
     transform: rotate(135deg); }
-  .menu .menu__mobile {
+  .menu .menu__container {
     height: 0;
     overflow: hidden;
     background: #fff; }
-  .menu .menu__mobile.open {
+  .menu .menu__container.open {
     margin: 0;
+    width: 100%;
     height: auto;
     transition: all 400ms ease-out; }
   .menu .menu__item {
@@ -424,9 +420,9 @@ main {
     width: 0;
     background-color: #64c29e;
     transition: all .3s ease-in-out; }
-  .menu .menu__mobile.open {
+  .menu .menu__container.open {
     transition: all .4s ease; }
-  .menu .menu__mobile.open {
+  .menu .menu__container.open {
     height: auto;
     width: 100vw;
     position: absolute;
@@ -435,7 +431,7 @@ main {
     display: flex;
     flex-direction: column;
     z-index: 1; }
-  .menu .menu__mobile.open .menu__item {
+  .menu .menu__container.open .menu__item {
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -462,10 +458,6 @@ main {
     footer .social-icons {
       display: flex;
       justify-content: space-around; } }
-
-@media screen and (min-width: 600px) {
-  main .main-screen ul {
-    display: flex; } }
 
 @media screen and (max-width: 600px) {
   main .new-generation {
