--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -60,8 +60,7 @@ body {
 }
 
 .main-screen {
-  background: scroll transparent url("../images/bg.png") no-repeat center;
-  background-size: cover;
+  background: scroll transparent url("../images/bg.png") no-repeat center / cover;
   height: 100vh;
 
 }
@@ -502,10 +501,10 @@ body {
   .hamburg-menu {
     position: fixed;
     top: 50px;
-    right: -50px;
+    right: -27px;
     transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
     z-index: 3;
   }
@@ -514,7 +513,7 @@ body {
     height: 6px;
     position: absolute;
     top: 50%;
-    left: 60%;
+    left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .5s;
@@ -589,7 +588,7 @@ body {
     margin: 0;
     width: 100%;
     height: auto;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     display: flex;
